k8s/event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: qasimhassan65/devops_assignment-event-service:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking
spec:
  selector:
    app: event-service
  ports:
    - port: 5002
      targetPort: 5002

---
