k8s/notification-service.yaml
# Notification Service Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: online-event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: qasimhassan65/devops_assignment-notification-service:latest
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: online-event-booking
spec:
  selector:
    app: notification-service
  ports:
    - port: 4003
      targetPort: 4003
