k8s/postgres-user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: online-event-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
  namespace: online-event-booking
spec:
  selector:
    app: user-db
  ports:
    - port: 5432
      targetPort: 5432
