k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: online-event-booking
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: eventbooking.yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3001

          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000

          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 5002

          - path: /api/bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 3002

          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 4004
